# ore

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  ClAUDE-zh.md  DOCUMENTATION.md  Dockerfile  README.md  pyproject.toml  requirements.txt  simple_test.py  tree.py  txt
alembic/: env.py
alembic/versions/: 5819433ff992_initial_migration_create_user_and_.py
backend/: README.md  cli.py  main.py
backend/alembic/: env.py
backend/api/v1/: auth.py  workflow_executions.py  workflows.py
backend/core/: auth.py  config.py  security.py
backend/db/: __init__.py  database.py
backend/models/: __init__.py  base.py  user.py  workflow.py
backend/schemas/: __init__.py  auth.py  common.py  user.py  workflow.py
backend/scripts/: dbUtils.py
backend/services/: auth.py  workflow.py  workflow_execution.py
backend/tests/: README_CORE_TESTS.md  conftest.py  test_commands.txt  test_workflow_core_api.py
backend/utils/: exceptions.py  logger.py
config/: __init__.py  backend_config.py  base.py  workflow_config.py
docs/: API_GUIDE.md
frontend/: .env.template  .eslintcache  .prettierrc.js  README.md  eslint.config.ts  package.json  txt  vite.config.ts
frontend/public/locales/zh/: auth.json
frontend/src/: i18n.ts  main.tsx  routeTree.gen.ts
frontend/src/api/: auth.ts  index.ts  workflow.ts
frontend/src/components/: Header.tsx  auth-guard.tsx.back
frontend/src/constant/: index.ts
frontend/src/feature/auth/: auth-form.tsx  hook.ts
frontend/src/feature/workflow/: hook.ts  hooks.ts  index.ts
frontend/src/feature/workflow/components/: create-workflow-dialog.tsx  index.ts  node-edit-dialog.tsx  node-panel.tsx  workflow-card.tsx  workflow-edge.tsx  workflow-editor-page.tsx  workflow-editor.tsx  workflow-empty-state.tsx  workflow-execution-dialog.tsx  workflow-execution-sidebar.tsx  workflow-node.tsx  workflow-selection-toolbar.tsx  workflow-settings-dialog.tsx  workflow-sidebar.tsx  workflows-page.tsx
frontend/src/provider/: theme-provider.tsx
frontend/src/routes/: __root.tsx  auth.tsx  index.tsx  workflow_.$id.tsx  workflows.tsx
frontend/src/routes/edit/: $id.tsx
frontend/src/store/: auth.ts
frontend/src/stores/: workflow-editor.ts
frontend/src/types/: auth.ts  workflow.ts
frontend/src/validation/: auth.ts  workflow.ts
workflow_engine/: README.md  __init__.py  readme1.md  workflow_types.py
workflow_engine/base/: __init__.py  engine.py
workflow_engine/engines/: __init__.py
workflow_engine/engines/tree/: __init__.py  engine.init.1.py  engine.init.2.py  engine.py  types.py
workflow_engine/examples/: langchain_demo.py  tree_workflow.py  tree_workflow_demo.py
workflow_engine/examples/configs/: tree_test_config.py
